[package]
name = "haste-server"
publish = false
description = "Haste Health server application."
license = "GPL-3.0"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }


[dependencies]
dotenvy = { workspace = true }
sqlx-postgres = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "time",
] }
jsonwebtoken = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = [
    "typed-routing",
    "typed-header",
] }
base64 = "0.22.1"
json-patch = "4.0.0"
maud = { version = "0.27.0", features = ["axum"] }
mime_guess = "2.0.5"
haste-access-control = { path = "../access-control", version = "0.*" }
haste-artifacts = { path = "../artifacts", version = "0.*" }
haste-config = { path = "../config", version = "0.*" }
haste-fhir-client = { path = "../fhir-client", version = "0.*", features = [
    "http",
    "axum",
] }
haste-fhir-generated-ops = { path = "../fhir-generated-ops", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*", features = [
    "sqlx",
] }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
    "axum",
] }
haste-fhir-ops = { path = "../fhir-ops", version = "0.*" }
haste-fhir-search = { path = "../fhir-search", version = "0.*" }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
haste-fhir-terminology = { path = "../fhir-terminology", version = "0.*" }
haste-fhirpath = { path = "../fhirpath", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*", features = ["derive"] }
haste-repository = { path = "../repository", version = "0.*", features = [
    "rate-limit",
] }
haste-rate-limit = { path = "../rate-limit", version = "0.*" }
petgraph = "0.8.3"
rand = "0.8"
rsa = "0.9.10"
rust-embed = { version = "8.9.0", features = ["axum-ex"] }
sendgrid = "0.24.1"
serde_html_form = "0.2.8"
sha1 = "0.10.6"
sha2 = "0.10.9"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
    "fs",
    "cors",
    "normalize-path",
    "compression-gzip",
    "trace",
] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
typify = "0.5.0"
url = "2.5.4"
zxcvbn = "3.1.0"
