[package]
name = "haste-testscript-runner"
description = "FHIR TestScript Runner for Haste Health"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
haste-fhir-client = { path = "../fhir-client", version = "0.*", features = [
    "http",
] }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhirpath = { path = "../fhirpath", version = "0.*" }
haste-pointer = { path = "../pointer", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*" }
tokio = { version = "1.49.0", features = ["sync"] }
tracing = "0.1.41"
regex = "1.12.2"
